2008-11-05  Kurt Biery <biery@fnal.gov>

	* tag V03-14-17-02
	* Fixed the bug that was causing spurious discard messages to be
	  sent to the resource broker. (The inappropriate use of I2O message
	  header information after the message had been released from
	  memory was causing errors in the target address of the discard
	  message and its contents.)

2008-10-14  Kurt Biery <biery@fnal.gov>

	* tag V03-14-17-01
	* Added protection to the actionPerformed() method in the SM
	  to prevent uninitialized data from being referenced in the
	  Halted state.

2008-10-09  Kurt Biery <biery@fnal.gov>

	* tag V03-14-17
	* Added rcmsStateListener parameters to the SM application infospace
	  as requested by Hannes to support large configurations in the online.
	  Also, modified the sequence of operations at end run to correctly
	  assign file and event count statistics. This tag requires
	  EventFilter/Utilities V00-14-16.

2008-09-23  Kurt Biery <biery@fnal.gov>

	* tag V03-14-16
	* Reduced the number of copies of INIT messages kept in memory.
	  This should eliminate the out-of-memory crashes that we have
	  observed when testing with large numbers of filter units and
	  a large HLT configuration. (Crashes were seen when the RBSender
	  web page was visited and when multiple runs were started without
	  intervening destroy/configure transitions.)

2008-09-20  Kurt Biery <biery@fnal.gov>

	* tag V03-14-15
	* Added protection against NULL registry data pointers in 
	  StorageManager::receiveRegistryMessage().  Added clearing of the
	  SMFUSenderList in the enabling() method of StorageManager.
	  These changes will hopefully reduce or eliminate the occasional
	  crashes of the SM at the beginning of runs.

2008-09-16  Kurt Biery <biery@fnal.gov>

	* tag V03-14-14
	* Modified the INIT message handling in SMFUSenderEntry to handle
	  multiple INIT messages from the same RB.  Re-enabled the RBSender
	  web page.  Added partial fixes for the storedEvents problem at 